<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lab2 18-551</string>
    <string name="main_text">Face recognition and video filtering provided by Lu, Barton &amp; Co.</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_face_recognition">Face Recognition</string>
    <string name="title_activity_video_processing">Video Processing</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_edge">Edges</string>
    <string name="btn_blur">Blur</string>
    <string name="class_btn">+Class</string>
    <string name="face_rec_header">Face Recognition</string>
    <string name="train_btn">Train</string>
    <string name="test_btn">Test</string>
    <string name="class_in_popup_title">Add Class</string>
    <string name="class_in_popup_msg">Name your new class.</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">Ok</string>
    <string name="default_class">No Class Found</string>
    <string name="recognition_msg">Class:</string>

</resources>
